# gtkmogo2

./: GtkMogo2.md  Makefile.w32  ProjectHome.md  README  gtkmogo2.c
po/: gtkmogo2.pot  ja.po
trunk/: ChangeLog  Makefile.am  configure.in  gtkmogo2.c  gtkmogo2.spec.in
trunk/data/: Thumbs.db
trunk/po/: Makefile  Makefile.w32  ja.po  ja.po.orig
wiki/: GtkMogo2.wiki
